# trade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HANDOFF.md  PROSPTECT.md  README.md  env_utils.py  main.py  nginx.conf.template  product_updates.jsonl  pyproject.toml  railway.toml
scripts/: deploy_api.sh  deploy_prod.sh  deploy_web.sh  dev.sh  get_telegram_chat_id.py  run_daily_prospecting.py  run_periodic_prospecting.py  send_telegram_startup.py  smoke_hosted.sh  start_railway.sh  test_telegram_send.py
src/: __init__.py  env_utils.py
tests/: test_api_app.py  test_api_mailbox_coverage.py  test_api_observability.py  test_application_use_case.py  test_auth_architecture.py  test_automation_runtime.py  test_autonomous_build.py  test_autonomous_build_runtime.py  test_billing_architecture.py  test_composite_email_notifier.py  test_composite_lead_source.py  test_crm_import.py  test_crm_mailbox_use_case_coverage.py  test_crm_postgres_repository.py  test_crm_runtime.py  test_daily_prospecting_script.py  test_domain_services.py  test_etf_sentiment_runtime.py  test_founder_code_application.py  test_founder_code_runtime.py  test_google_news_rss_source.py  test_hacker_news_lead_source.py  test_indie_hackers_lead_source.py  test_live_api_smoke.py  test_mailbox_provider_and_runtime.py  test_main_and_package_imports.py  test_market_data_adapter.py  test_openai_crm_image_intake.py  test_openai_crm_spreadsheet_assist.py  test_openai_etf_sentiment_agent.py  test_openai_prospect_drafter.py  test_operator_briefing.py  test_operator_briefing_runtime.py  (+18 more)
(+144 files in other folders)
