[project]
name = "brivoly"
version = "0.1.0"
description = "Market crash monitoring dashboard with de-risk and dip-buy signals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg[binary]>=3.2.9",
    "pyjwt[crypto]>=2.10.1",
    "pytest-cov>=7.1.0",
    "stripe>=15.1.0",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.56",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=src --cov-fail-under=100 --cov-report=term-missing"
